--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/QA/Pages/RoomView.razor
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/QA/Pages/RoomView.razor
@@ -151,7 +151,7 @@
         </div>
 
         <!-- Approved Questions Section -->
-        <div class="card">
+        <div class="rz-card">
             <div class="card-header">
                 <h5 class="mb-0">Upcoming Questions</h5>
             </div>
