--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Layout/MainLayout.razor
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Layout/MainLayout.razor
@@ -1,10 +1,17 @@
-﻿@inherits LayoutComponentBase
+﻿@using Microsoft.Extensions.Options
+@inherits LayoutComponentBase
+@inject CookieThemeService CookieThemeService
 
 <RadzenLayout>
     <RadzenHeader>
-        <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" Gap="0">
-            <RadzenSidebarToggle Click="@(() => sidebarExpanded = !sidebarExpanded)" />
-            <RadzenLabel Text="BlazorApp" Style="font-size: 1.2rem; font-weight: bold; margin-left: 1rem;" />
+        <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" Gap="0" JustifyContent="JustifyContent.SpaceBetween" Style="width: 100%;">
+            <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" Gap="0">
+                <RadzenSidebarToggle Click="@(() => sidebarExpanded = !sidebarExpanded)" />
+                <RadzenLabel Text="BlazorApp" Style="font-size: 1.2rem; font-weight: bold; margin-left: 1rem;" />
+            </RadzenStack>
+            <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" Gap="0.5rem" Style="margin-right: 1rem;">
+                <ThemeToggle />
+            </RadzenStack>
         </RadzenStack>
     </RadzenHeader>
     <RadzenSidebar @bind-Expanded="@sidebarExpanded">
